# pretext_extension_reader

./: CMakeLists.txt  genome_class.py  readme.md
src/: CMakeLists.txt  main_pretext.cpp  pretext_parser.cpp  pretext_parser.h  pybind_pretext_agp.cpp  pybind_pretext_agp.h
src/opengl_shader/: shader_s.h
src/python/: utils.py
src/python/pretext_parsing/: genome_class.py
